feat:(added rules and style togglemenu)

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -100,7 +100,7 @@
                                 </ul>
                             </div>
                             <div class="togglemenu">
-                                <i class="fa-solid fa-chevron-down" @click="toggleMessageOptions(message)"></i>
+                                <i id="icon-menu" class="fa-solid fa-chevron-down" @click="toggleMessageOptions(message)"></i>
                             </div>
                         </div>
                     </div>
