feat:(add darkmode function)

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -83,6 +83,7 @@
                         <p>Ultimo accesso oggi alle ore 12:00</p>
                     </div>
                     <div class="chat-icons-sidebar">
+                        <i class="fa-solid fa-moon" @click="toggleDarkMode"></i>
                         <i class="fa-solid fa-magnifying-glass"></i>
                         <i class="fa-solid fa-paperclip"></i>
                         <i class="fa-solid fa-ellipsis-vertical"></i>
