feat.(add style css dark mode end)

--- a/BONUS/index.html
+++ b/BONUS/index.html
@@ -33,7 +33,7 @@
                     </div>
                     <h3>Rick Sanchez</h3>
                     <div class="profile-icons">
-                        <i class="fa-solid fa-rotate-left"></i>
+                        <i class="fa-solid fa-circle-notch"></i>
                         <i class="fa-solid fa-message"></i>
                         <i class="fa-solid fa-ellipsis-vertical"></i>
                     </div>
